src/objects/ints__GDC_Verify_Record__c.object
<CustomObject>
    <fields>
        <fullName>ints__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>GDC Verify Records</relationshipLabel>
        <relationshipName>GDC_Verify_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__RecordStatus__c</fullName>
        <label>Record Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransactionID__c</fullName>
        <label>TransactionID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__UploadedDt__c</fullName>
        <label>UploadedDt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDC Verify Record</label>
    <nameField>
        <displayFormat>GDC -{0000000000}</displayFormat>
        <label>GDC Verify Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDC Veirfy Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>